# claude-agent-sdk-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  UPSTREAM.md
.claude/skills/claude-agent-sdk-rust/: SKILL.md
.claude/skills/sync-upstream/: SKILL.md
bench/: bench_python.py  bench_rust.rs  run_benchmark.sh
examples/: builder.rs  hooks.rs  mcp_calculator.rs  permissions.rs  quickstart.rs  streaming_client.rs  streaming_text.rs  telemetry.rs
src/: client.rs  convenience.rs  errors.rs  helpers.rs  lib.rs  mcp.rs  message_parser.rs  query.rs  session_mutations.rs  session_store_ops.rs  sessions.rs  telemetry.rs  types.rs
src/transport/: mod.rs  subprocess.rs
tests/: message_parser.rs  types.rs
